RESOLVED FIXED113172
Clear button visibility is not updated when restoring form state
https://bugs.webkit.org/show_bug.cgi?id=113172
Summary Clear button visibility is not updated when restoring form state
Keishi Hattori
Reported 2013-03-25 00:18:56 PDT
Clear button visibility is not updated when restoring form state
Attachments
Patch (15.20 KB, patch)
2013-03-25 00:28 PDT, Keishi Hattori
no flags
Patch (14.97 KB, patch)
2013-03-25 00:43 PDT, Keishi Hattori
no flags
Keishi Hattori
Comment 1 2013-03-25 00:28:40 PDT
Kent Tamura
Comment 2 2013-03-25 00:31:51 PDT
Comment on attachment 194794 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=194794&action=review > Source/WebCore/html/BaseMultipleFieldsDateAndTimeInputType.cpp:360 > +{printf("BaseMultipleFieldsDateAndTimeInputType::restoreFormControlState\n"); don't add printf.
Keishi Hattori
Comment 3 2013-03-25 00:43:49 PDT
WebKit Review Bot
Comment 4 2013-03-25 01:24:04 PDT
Comment on attachment 194795 [details] Patch Clearing flags on attachment: 194795 Committed r146746: <http://trac.webkit.org/changeset/146746>
WebKit Review Bot
Comment 5 2013-03-25 01:24:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.