Clear button visibility is not updated when restoring form state https://bugs.webkit.org/show_bug.cgi?id=113172

Source/WebCore:

Clear button wasn't showing up when restoring form state.

Reviewed by Kent Tamura.

Tests: fast/forms/date-multiple-fields/date-multiple-fields-clearbutton-visibility-after-restore.html
       fast/forms/datetimelocal-multiple-fields/datetimelocal-multiple-fields-clearbutton-visibility-after-restore.html
       fast/forms/month-multiple-fields/month-multiple-fields-clearbutton-visibility-after-restore.html
       fast/forms/time-multiple-fields/time-multiple-fields-clearbutton-visibility-after-restore.html
       fast/forms/week-multiple-fields/week-multiple-fields-clearbutton-visibility-after-restore.html

* html/BaseMultipleFieldsDateAndTimeInputType.cpp:
(WebCore::BaseMultipleFieldsDateAndTimeInputType::restoreFormControlState):

LayoutTests:

Reviewed by Kent Tamura.

* fast/forms/date-multiple-fields/date-multiple-fields-clearbutton-visibility-after-restore-expected.html: Added.
* fast/forms/date-multiple-fields/date-multiple-fields-clearbutton-visibility-after-restore.html: Added.
* fast/forms/datetimelocal-multiple-fields/datetimelocal-multiple-fields-clearbutton-visibility-after-restore-expected.html: Added.
* fast/forms/datetimelocal-multiple-fields/datetimelocal-multiple-fields-clearbutton-visibility-after-restore.html: Added.
* fast/forms/month-multiple-fields/month-multiple-fields-clearbutton-visibility-after-restore-expected.html: Added.
* fast/forms/month-multiple-fields/month-multiple-fields-clearbutton-visibility-after-restore.html: Added.
* fast/forms/time-multiple-fields/time-multiple-fields-clearbutton-visibility-after-restore-expected.html: Added.
* fast/forms/time-multiple-fields/time-multiple-fields-clearbutton-visibility-after-restore.html: Added.
* fast/forms/week-multiple-fields/week-multiple-fields-clearbutton-visibility-after-restore-expected.html: Added.
* fast/forms/week-multiple-fields/week-multiple-fields-clearbutton-visibility-after-restore.html: Added.


Canonical link: https://commits.webkit.org/131511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146746 268f45cc-cd09-0410-ab3c-d52691b4dbfc